Внесены вправки от РВ. Изменена структура проекта. Пермещена некоторая логика.